@@ -86,6 +86,66 @@ AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
 AT_CLEANUP
 
 
+AT_SETUP([OPEN EXTEND and CLOSE, SEQUENTIAL, create if non-existent])
+AT_KEYWORDS([runfile empty CLOSE WRITE READ])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       ENVIRONMENT DIVISION.
+       CONFIGURATION SECTION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+           SELECT  FILE0         ASSIGN TO "testfile"
+                   ORGANIZATION  IS SEQUENTIAL
+                   FILE STATUS   IS WSFS.
+       DATA DIVISION.
+       FILE SECTION.
+       FD  FILE0.
+       01  F0REC             PIC X(80).
+       WORKING-STORAGE SECTION.
+       01  WSFS              PIC X(2).
+       PROCEDURE DIVISION.
+      *
+           OPEN EXTEND FILE0
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS EXTEND:" WSFS.
+           MOVE ALL "A" TO F0REC
+           WRITE F0REC
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS WRITE A:" WSFS.
+           CLOSE FILE0
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS CLOSE:" WSFS.
+           OPEN EXTEND FILE0
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS EXTEND, empty file:" WSFS.
+           MOVE ALL "B" TO F0REC
+           WRITE F0REC
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS WRITE B:" WSFS.
+           CLOSE FILE0
+      *
+           OPEN INPUT FILE0
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS INPUT:" WSFS.
+           READ FILE0 NEXT
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS READ A:" WSFS.
+           READ FILE0 NEXT
+           IF WSFS NOT = "00"
+              DISPLAY "STATUS READ B:" WSFS.
+           CLOSE FILE0
+      *
+           STOP RUN.
+])
+
+AT_CHECK([$COMPILE -fio-extend-create prog.cob], [0], [], [])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [], [])
+
+AT_CLEANUP
+
+
 AT_SETUP([variable-length SEQUENTIAL data integrity])
 AT_KEYWORDS([runfile record OPEN])
 
