@@ -1,4 +1,11 @@
 
+2023-06-16  David Declerck <david.declerck@ocamlpro.com>
+
+	* flag.def: new flag -fio-extend-create to allow file creation
+	  when trying to open a non-existent file in EXTEND or I-O mode
+	* codegen.c: populate the new flag_io_extend_create field with
+	  the value of the flag flag_io_extend_create
+
 2023-06-09  Simon Sobisch <simonsobisch@gnu.org>
 
 	* error.c (print_error, diagnostics_show_caret): fix for C89 compat
